Fix key facts author spacing when an image is present

--- a/sass/includes/_key-facts__author.scss
+++ b/sass/includes/_key-facts__author.scss
@@ -17,4 +17,24 @@
   &-info-heading, &-info-text {
     color: $color__black;
   }
+
+  @media screen and (max-width: $screen__lg) {
+    &-info {
+      margin-left: 3rem;
+    }
+  }
+
+  @media screen and (max-width: $screen__md) {
+    &-image-container {
+      text-align: left;
+    }
+
+    &-info {
+      margin-left: 0;
+    }
+  }
+
+  &-info--no-margin-left {
+    margin-left: 0;
+  }
 }
